--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "homepage": "http://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ionic serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "dev": "http-server www",
     "dev:ssl": "http-server www -gzip",
     "build": "ionic build",
